# ChangeLog for net-libs/libproxy
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/libproxy/ChangeLog,v 1.69 2011/10/18 19:05:58 pacho Exp $

  07 Nov 2011; Fabian Groffen <grobian@gentoo.org> libproxy-0.4.7.ebuild:
  Marked ~x86-macos

*libproxy-0.4.7 (18 Oct 2011)

  18 Oct 2011; Pacho Ramos <pacho@gentoo.org> +libproxy-0.4.7.ebuild,
  -libproxy-0.4.6.ebuild, metadata.xml:
  Version bump, remove old.

  06 Aug 2011; Zac Medico <zmedico@gentoo.org> libproxy-0.4.6-r3.ebuild:
  Add ~x86-linux keyword.

  31 Jul 2011; Jeroen Roovers <jer@gentoo.org> libproxy-0.4.6-r3.ebuild:
  Stable for HPPA (bug #372813).

  28 Jul 2011; Pacho Ramos <pacho@gentoo.org> -libproxy-0.4.6-r2.ebuild:
  Remove old.

  24 Jul 2011; Kacper Kowalik <xarthisius@gentoo.org> libproxy-0.4.6-r3.ebuild:
  ppc/ppc64 stable wrt #372813

  23 Jul 2011; Raúl Porcel <armin76@gentoo.org> libproxy-0.4.6-r3.ebuild:
  alpha/ia64/sh/sparc stable wrt #372813

  23 Jul 2011; Markus Meier <maekke@gentoo.org> libproxy-0.4.6-r3.ebuild:
  arm stable, bug #372813

  17 Jul 2011; Markus Meier <maekke@gentoo.org> libproxy-0.4.6-r3.ebuild:
  x86 stable, bug #372813

  16 Jul 2011; Nirbheek Chauhan <nirbheek@gentoo.org> libproxy-0.4.6-r3.ebuild:
  Always install the vapi file since it needs no deps and is only 333 bytes in
  size. See bug 372813.

  14 Jul 2011; Pacho Ramos <pacho@gentoo.org> libproxy-0.4.6-r3.ebuild:
  amd64 stable, bug #372813

  09 Jul 2011; Matt Turner <mattst88@gentoo.org> libproxy-0.4.6-r3.ebuild:
  Added ~mips, bug 365331

*libproxy-0.4.6-r3 (05 Jun 2011)

  05 Jun 2011; Pacho Ramos <pacho@gentoo.org> +libproxy-0.4.6-r3.ebuild,
  +files/libproxy-0.4.6-backports.patch,
  +files/libproxy-0.4.6-flags-mixing.patch:
  Revision bump disabling webkit support as it causes problems like bug #366791
  (we will be able to recover this with webkit-1.6), do the same for xulrunner