@@ -20,13 +20,13 @@ AUX libproxy-0.4.6-xulrunner-2.patch 4763 RMD160 66210bdb6497b14358fd73037b6e981
 DIST libproxy-0.4.6.tar.gz 82483 RMD160 f5f03c84ad2d87fe728869fadc669628737c639e SHA1 6e9745c87b774f34bf53f07a54284c0d72020e94 SHA256 9ad912e63b1efca98fb442240a2bc7302e6021c1d0b1b9363327729f29462f30
 DIST libproxy-0.4.7.tar.gz 91092 RMD160 a09c8320cbabed23c84ceddf3c9b572cf89c9c0e SHA1 b01ebbdf837babf63f38ee34e261d76f23dad319 SHA256 8fe0a58810139ba3c2e186deccf3e68adcd127aa0e972b0862b30b3dde493797
 EBUILD libproxy-0.4.6-r3.ebuild 2676 RMD160 b5cb5329d0f91e9a386b8260394b5d4b3ddeab6b SHA1 12cda6f8392e883374f1f93f0465536f844ae3e5 SHA256 b30facb219795019a5f798fea22f7b53f855fcb66751f4af1aa2ed69e607bb84
-EBUILD libproxy-0.4.7.ebuild 2510 RMD160 00c1b5fbf9c8da89dd7aa34dc1f67db0e22fd143 SHA1 f839179a5cfbf8cc9b16665d25d4fdd3571fd838 SHA256 c428b6e989baf169aa8f5aad6e57b1ed677044277592fa05e00b0fe6253e23c2
-MISC ChangeLog 11006 RMD160 e9a0016cb95660e52fe668fdad579468dc10324b SHA1 cc83f7c060b3f27273c40dd1e4ac12938040732a SHA256 84fdbc8f0e8b7fdccf843cde3738bd93e189e9f35107e9abe799fbee02dd078d
+EBUILD libproxy-0.4.7.ebuild 2678 RMD160 45cf09fa06a4f6c3b0809e4441e96048bbeedfd7 SHA1 75b5e568fa3a914b21b2da78b9eab2bcdf443e5c SHA256 8fe17818ad814dff79813f0f285f57c0509ea8ea357815c9fa530417e06eed6f
+MISC ChangeLog 11134 RMD160 e4236fed5de5033b6d0c2b1498fc6cf4ff6666cc SHA1 02eea7612b7a6f1ff772f4f276fd15fee8c1e860 SHA256 bf32bf785720259ad3512a5e7ada6bdcd5e5cadbb5222c3572fe7ccad52e1334
 MISC metadata.xml 406 RMD160 5c499c2bfe217a922f13323d217726c7160deb94 SHA1 ea67953dc365e7657e55a8144936ef6234112b41 SHA256 cf35b0493dce3b4d725a8532a7fa4679241f81eb9e0560469d63409f44e9daef
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (Darwin)
 
-iEYEARECAAYFAk64OFIACgkQX3X2B8XHToma5wCgkbyz2Sc2pbhfE7mjCm4OspsD
-MXcAn1izd9gr+0Pzkl+nmRUDmeH6aTY6
-=MqBx
+iEYEARECAAYFAk64PdUACgkQX3X2B8XHTomR1ACglB0JnLa+BY2HwqOq8+Bibz2g
+Z2cAn1XoHuVIf0g8kSC7M6UU6iZ8EOBc
+=Coxz
 -----END PGP SIGNATURE-----
